<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image"
        android:scaleType="fitCenter"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/minus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circle"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_remove_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quantity"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:minWidth="50dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@id/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/minus"
        app:layout_constraintTop_toTopOf="@id/minus"
        android:text="0" />

    <ImageView
        android:id="@+id/plus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/circle"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/quantity" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"
        tools:text="Name"
        />

    <TextView
        android:id="@+id/unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="Name"
        />

    <TextView
        android:id="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unit"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="Name"
        />

    <TextView
        android:id="@+id/paid_price"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/green"
        android:fontFamily="sans-serif-black"
        tools:text="Name"
        />

    <TextView
        android:id="@+id/normal_price"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toEndOf="@id/paid_price"
        android:layout_width="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="Name"
        />
    
    <Button
        android:id="@+id/add"
        android:text="@string/anadir"
        android:background="@drawable/rectangle_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:layout_width="0dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content"/>

    <ImageView
        android:visibility="invisible"
        android:id="@+id/check"
        app:layout_constraintTop_toTopOf="@id/add"
        android:src="@drawable/ic_baseline_check_24"
        android:background="@drawable/rectangle_filled_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>